# Capstone-2025-team-38

./: README.md  install_and_build.sh
uros_ws/firmware/zephyr_apps/apps/dice-test/: CMakeLists.txt  serial.conf
uros_ws/firmware/zephyr_apps/apps/dice-test/lib/hash/: CMakeLists.txt
uros_ws/firmware/zephyr_apps/apps/dice-test/lib/hash/include/hash/: hash.h
uros_ws/firmware/zephyr_apps/apps/dice-test/lib/hash/src/: hash.c
uros_ws/firmware/zephyr_apps/apps/dice-test/lib/open-dice/src/: mbedtls_ops.c
uros_ws/firmware/zephyr_apps/apps/dice-test/src/: main.c
zephyrproject/zephyr/micro_ros_dice/: CMakeLists.txt  app.overlay  prj.conf
zephyrproject/zephyr/micro_ros_dice/.github/workflows/: nightly.yml
zephyrproject/zephyr/micro_ros_dice/modules/hash/include/hash/: hash.h
zephyrproject/zephyr/micro_ros_dice/modules/hash/src/: hash.c
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/: .gitignore  libmicroros.mk  zephyr_toolchain.cmake
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/include/uxr/client/: config.h
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_dev/install/: local_setup.sh  setup.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_dev/log/: latest_build
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/lib/tracetools_trace/: trace
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/action_msgs/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/builtin_interfaces/: local_setup.sh  package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/common_interfaces/: local_setup.sh  package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/composition_interfaces/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/diagnostic_msgs/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/geometry_msgs/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/lifecycle_msgs/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/micro_ros_msgs/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/micro_ros_utilities/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/microcdr/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/microxrcedds_client/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/nav_msgs/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rcl/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rcl_action/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rcl_interfaces/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rcl_lifecycle/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rcl_logging_interface/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rcl_logging_noop/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rclc/: local_setup.sh  package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rclc_lifecycle/: local_setup.sh  package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/install/share/rclc_parameter/: package.sh
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/log/: latest_build
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/src/Micro-XRCE-DDS-Client/: CMakeLists.txt
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/src/log/: latest_list
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/src/micro_ros_utilities/: CHANGELOG.rst
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/micro_ros_src/src/rclc/: NOTICE
zephyrproject/zephyr/micro_ros_dice/modules/libmicroros/microros_transports/serial/: microros_transports.c
zephyrproject/zephyr/micro_ros_dice/modules/mpu/: CMakeLists.txt
zephyrproject/zephyr/micro_ros_dice/modules/mpu/include/: mpu_config.h
zephyrproject/zephyr/micro_ros_dice/modules/mpu/src/: mpu_config.c
zephyrproject/zephyr/micro_ros_dice/modules/open-dice/src/: dice.c  mbedtls_ops.c
zephyrproject/zephyr/micro_ros_dice/src/: main.c  main_back.c
zephyrproject/zephyr/micro_ros_tfm/: CMakeLists.txt  prj.conf
zephyrproject/zephyr/micro_ros_tfm/.github/workflows/: ci.yml
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/: .gitignore  CMakeLists.txt  libmicroros.mk  zephyr_toolchain.cmake
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/micro_ros_dev/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/micro_ros_dev/log/: latest_build
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/micro_ros_src/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/micro_ros_src/log/: latest_build
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/micro_ros_src/src/Micro-XRCE-DDS-Client/: CMakeLists.txt
zephyrproject/zephyr/micro_ros_tfm/modules/libmicroros/micro_ros_src/src/log/: latest_list
zephyrproject/zephyr/micro_ros_tfm/src/: main.c  psa_attestation.c
zephyrproject/zephyr/micro_ros_tfm/src/configs/: config_tfm.h
(+1412 files in other folders)
